--- a/package.json
+++ b/package.json
@@ -11,8 +11,11 @@
   "dependencies": {
     "@clerk/nextjs": "^4.29.5",
     "@neondatabase/serverless": "^0.7.2",
+    "@pinecone-database/doc-splitter": "^0.0.1",
+    "@pinecone-database/pinecone": "^2.1.0",
     "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.18.1",
+    "@types/md5": "^2.3.5",
     "aws-sdk": "^2.1550.0",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
@@ -20,9 +23,14 @@
     "dotenv": "^16.4.1",
     "drizzle-kit": "^0.20.14",
     "drizzle-orm": "^0.29.3",
+    "langchain": "^0.1.28",
     "lucide-react": "^0.321.0",
+    "md5": "^2.3.0",
     "next": "14.1.0",
+    "openai-edge": "^1.2.2",
+    "pdf-parse": "^1.1.1",
     "pg": "^8.11.3",
+    "pinecone-client": "^2.0.0",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
